--- a/index.html
+++ b/index.html
@@ -5,14 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster&family=Nunito&display=swap" rel="stylesheet">
-
+<!-- link  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<!--google font-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster&family=Nunito&display=swap" rel="stylesheet">
+<!--css link-->
 <link rel="stylesheet" href="style.css">
 
     <title>Educavo</title>
+
 </head>
+
 <body>
+    <header>
+        <!-- navbar -->
+        <nav class="navbar py-4 container navbar-expand-lg">
+          <div class="container">
+            <a class="navbar-brand fs-1 fw-semibold darkish">Educavo</a>
+            <div class="d-flex">
+              <form class="" action="">
+                <button
+                  class="btn btn-outline-info fs-5  fw-semibold px-4 py-2 text-primary d-none d-md-block d-lg-none me-4"
+                  type="submit">Register</button>
+              </form>
+              <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+              <ul class="navbar-nav m-auto">
+                <li class="nav-item mx-4">
+                  <a class="nav-link fw-semibold" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link fw-semibold" aria-current="page" href="#">Courses</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link fw-semibold" aria-current="page" href="#">Deals</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link fw-semibold" aria-current="page" href="#">Success</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link fw-semibold" aria-current="page" href="#">About</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link fw-semibold" aria-current="page" href="#">Register</a>
+                </li>
+                <ul>
+            </div>
+          </div>
     
+          <form role="search ">
+            <button class="btn btn-outline-info fs-5  fw-semibold px-4 py-2 text-primary d-none d-lg-block"
+              type="submit">Register</button>
+          </form>
+        </nav>
 </body>
 </html>
