--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </head>
 
 <body>
+    <!--navbar-->
     <header>
-        <!-- navbar -->
+
         <nav class="navbar py-4 container navbar-expand-lg">
           <div class="container">
             <a class="navbar-brand fs-1 fw-semibold darkish">Educavo</a>
@@ -65,5 +66,178 @@
               type="submit">Register</button>
           </form>
         </nav>
+
+         <!-- image -->
+    <section>
+        <div id="carouselExampleControls" class="carousel slide container" data-bs-ride="carousel">
+          <div class="carousel-inner">
+  
+            <div class="carousel-item  active  ">
+              <div class="item">
+                <img src="images/cover/cover-1.png" class="d-block w-100 " alt="...">
+              </div>
+  
+              <!-- large device  -->
+  
+              <div class="carousel-caption w-50 position-absolute top-50 start-50 translate-middle d-none d-lg-block">
+                <h1 class="display-4 fw-semibold mb-4">Get Started Digital
+                  Learning</h1>
+                <p class="fs-6 text-white mb-4">It is a long established fact that a reader will be distracted by the
+                  readable
+                  content of a page when looking at its layout.</p>
+                <button class=" btn btn-primary fw-semibold fs-5  px-4 py-2">Get Started</button>
+              </div>
+
+              
+            <!-- medium devide  -->
+
+            <div
+            class="carousel-caption w-50 position-absolute top-50 start-50 translate-middle d-none d-md-block d-lg-none">
+            <h1 class="display-6 fw-semibold mb-0">Get Started Digital
+              Learning</h1>
+            <p class="fs-6 text-white mb-2">It is a long established fact that a reader will be distracted by the
+              readable
+              content of a page when looking at its layout.</p>
+            <button class=" btn btn-primary  fs-6 ">Get Started</button>
+          </div>
+
+          <!--  small device  -->
+
+          <div class="carousel-caption mb-0  py-0 d-block d-md-none bottom-0 ">
+            <h5 class="display-6 fw-normal mb-0">Get Started Digital
+              Learning</h5>
+            <p class=" text-white f-6 mb-1 lh-1 fw-normal"> <small> It is a long established fact that a reader will
+                be distracted by the
+                readable
+                content of a page when looking at its layout.</small></p>
+            <button class=" btn btn-primary  py-1 mb-2">Get Started</button>
+          </div>
+
+        </div>
+
+        <div class="carousel-item    ">
+          <div class="item">
+            <img src="images/cover/cover-3.jpg" class="d-block w-100 " alt="...">
+          </div>
+          <!--  large device  -->
+
+          <div class="carousel-caption w-50 position-absolute top-50 start-50 translate-middle d-none d-lg-block">
+            <h1 class="display-4 fw-semibold mb-4">Get Started Digital
+              Learning</h1>
+            <p class="fs-6 text-white mb-4">It is a long established fact that a reader will be distracted by the
+              readable
+              content of a page when looking at its layout.</p>
+            <button class=" btn btn-primary fw-semibold fs-5  px-4 py-2">Get Started</button>
+          </div>
+
+          <!--  medium devide  -->
+
+          <div
+            class="carousel-caption w-50 position-absolute top-50 start-50 translate-middle d-none d-md-block d-lg-none">
+            <h1 class="display-6 fw-semibold mb-0">Get Started Digital
+              Learning</h1>
+            <p class="fs-6 text-white mb-2">It is a long established fact that a reader will be distracted by the
+              readable
+              content of a page when looking at its layout.</p>
+            <button class=" btn btn-primary  fs-6 ">Get Started</button>
+          </div>
+
+          <!-- small device  -->
+
+          <div class="carousel-caption mb-0  py-0 d-block d-md-none bottom-0 ">
+            <h5 class="display-6 fw-normal mb-0">Get Started Digital
+              Learning</h5>
+            <p class=" text-white f-6 mb-1 lh-1 fw-normal"> <small> It is a long established fact that a reader will
+                be distracted by the
+                readable
+                content of a page when looking at its layout.</small></p>
+            <button class=" btn btn-primary  py-1 mb-2">Get Started</button>
+          </div>
+
+        </div>
+
+        
+        <div class="carousel-item    ">
+            <div class="item">
+              <img src="images/cover/cover-3.jpg" class="d-block w-100 " alt="...">
+            </div>
+            <!-- large device  -->
+
+            <div class="carousel-caption w-50 position-absolute top-50 start-50 translate-middle d-none d-lg-block">
+              <h1 class="display-4 fw-semibold mb-4">Get Started Digital
+                Learning</h1>
+              <p class="fs-6 text-white mb-4">It is a long established fact that a reader will be distracted by the
+                readable
+                content of a page when looking at its layout.</p>
+              <button class=" btn btn-primary fw-semibold fs-5  px-4 py-2">Get Started</button>
+            </div>
+
+            <!-- medium devide  -->
+
+            <div
+              class="carousel-caption w-50 position-absolute top-50 start-50 translate-middle d-none d-md-block d-lg-none">
+              <h1 class="display-6 fw-semibold mb-0">Get Started Digital
+                Learning</h1>
+              <p class="fs-6 text-white mb-2">It is a long established fact that a reader will be distracted by the
+                readable
+                content of a page when looking at its layout.</p>
+              <button class=" btn btn-primary  fs-6 ">Get Started</button>
+            </div>
+
+            <!-- small device  -->
+
+            <div class="carousel-caption mb-0  py-0 d-block d-md-none bottom-0 ">
+              <h5 class="display-6 fw-normal mb-0">Get Started Digital
+                Learning</h5>
+              <p class=" text-white f-6 mb-1 lh-1 fw-normal"> <small> It is a long established fact that a reader will
+                  be distracted by the
+                  readable
+                  content of a page when looking at its layout.</small></p>
+              <button class=" btn btn-primary  py-1 mb-2">Get Started</button>
+            </div>
+
+          </div>
+          <div class="carousel-item   ">
+            <div class="item">
+              <img src="images/cover/cover-3.jpg" class="d-block w-100 " alt="...">
+            </div>
+            <!--  large device  -->
+
+            <div class="carousel-caption w-50 position-absolute top-50 start-50 translate-middle d-none d-lg-block">
+              <h1 class="display-4 fw-semibold mb-4">Get Started Digital
+                Learning</h1>
+              <p class="fs-6 text-white mb-4">It is a long established fact that a reader will be distracted by the
+                readable
+                content of a page when looking at its layout.</p>
+              <button class=" btn btn-primary fw-semibold fs-5  px-4 py-2">Get Started</button>
+            </div>
+
+            <!--  medium devide  -->
+
+            <div
+              class="carousel-caption w-50 position-absolute top-50 start-50 translate-middle d-none d-md-block d-lg-none">
+              <h1 class="display-6 fw-semibold mb-0">Get Started Digital
+                Learning</h1>
+              <p class="fs-6 text-white mb-2">It is a long established fact that a reader will be distracted by the
+                readable
+                content of a page when looking at its layout.</p>
+              <button class=" btn btn-primary  fs-6 ">Get Started</button>
+            </div>
+
+            <!-- small device  -->
+
+            <div class="carousel-caption mb-0  py-0 d-block d-md-none bottom-0 ">
+              <h5 class="display-6 fw-normal mb-0">Get Started Digital
+                Learning</h5>
+              <p class=" text-white f-6 mb-1 lh-1 fw-normal"> <small> It is a long established fact that a reader will
+                  be distracted by the
+                  readable
+                  content of a page when looking at its layout.</small></p>
+              <button class=" btn btn-primary  py-1 mb-2">Get Started</button>
+            </div>
+
+          </div>
+
+        </div>
 </body>
 </html>
