--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="carousel-item    ">
           <div class="item">
-            <img src="images/cover/cover-3.jpg" class="d-block w-100 " alt="...">
+            <img src="images/cover/cover-2.jpg" class="d-block w-100 " alt="...">
           </div>
           <!--  large device  -->
 
@@ -253,6 +253,132 @@
       </div>
     </section>
   </header>
+  <main>
+
+    <!-- our courses  -->
+
+    <section class="my-5 py-5 text-center">
+      <h2 class="text-center fw-bold fs-1">Discover Our Popular <br>
+        Courses</h2>
+      <p class="text-center text-muted">It is a long established fact that a reader will be distracted by the readable
+        <br>
+        content of a page when looking at its layout
+      </p>
+
+      <div class="container mt-5">
+
+        <div class="text-start row row-cols-xl-2  row-cols-lg-1 row-cols-md-1 row-cols-1 g-3">
+          <div class="col ">
+            <div class=" card mb-3">
+              <div class="row g-0">
+                <div class=" col-md-4 col-sm-12">
+                  <img src="images/course/course-1.png" class="img-fluid rounded-start w-100" alt="...">
+                </div>
+                <div class=" col-md-8 col-sm-12 d-flex justify-content-center align-items-center">
+                  <div class="card-body  ">
+                    <h5 class="card-title fw-bold fs-4 darkish">Fundamental Of UI/UX Design</h5>
+                    <p class="card-text mb-1 text-muted">Some quick example text to build on the card title
+                      and make up the bulk of the card.</p>
+                    <p class="card-text fs-5 fw-bold text-primary">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class=" card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4 col-sm-12">
+                  <img src="images/course/course-2.png" class="img-fluid rounded-start w-100" alt="...">
+                </div>
+                <div class="col-md-8 col-sm-12 d-flex justify-content-center align-items-center">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bold fs-4 darkish">Javascript Basic to advanced</h5>
+                    <p class="card-text mb-1 text-muted">Some quick example text to build on the card title
+                      and make up the bulk of the card.</p>
+                    <p class="card-text fs-5 fw-bold text-primary">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class=" card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4 col-sm-12">
+                  <img src="images/course/course-3.png" class="img-fluid rounded-start w-100" alt="...">
+                </div>
+                <div class="col-md-8 col-sm-12 d-flex justify-content-center align-items-center">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bold fs-4 darkish">Fullstack Web Development</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title
+                      and make up the bulk of the card.</p>
+                    <p class="card-text fs-5 fw-bold text-primary">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <div class=" card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4 col-sm-12">
+                  <img src="images/course/course-4.png" class="img-fluid rounded-start w-100" alt="...">
+                </div>
+                <div class="col-md-8 d-flex justify-content-center align-items-center">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bold fs-4 darkish">Digital Marketing</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title
+                      and make up the bulk of the card.</p>
+                    <p class="card-text fs-5 fw-bold text-primary">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <div class=" card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4 col-sm-12">
+                  <img src="images/course/course-5.png" class="img-fluid rounded-start w-100" alt="...">
+                </div>
+                <div class="col-md-8 d-flex justify-content-center align-items-center">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bold fs-4 darkish">Photography Basic Rules</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title
+                      and make up the bulk of the card.</p>
+                    <p class="card-text fs-5 fw-bold text-primary">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <div class=" card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4 col-sm-12">
+                  <img src="images/course/course-6.png" class="img-fluid rounded-start w-100" alt="...">
+                </div>
+                <div class="col-md-8 d-flex justify-content-center align-items-center">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bold fs-4 darkish">Motion Graphics</h5>
+                    <p class="card-text text-muted">Some quick example text to build on the card title
+                      and make up the bulk of the card.</p>
+                    <p class="card-text fs-5 fw-bold text-primary">Price : 20$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <button class=" btn btn-primary py-2 px-4 mt-4 fw-semibold fs-5 d-none d-lg-inline">See More Courses</button>
+
+      <button class="btn btn-primary py-2 px-4 mt-4 fw-semibold fs-5 d-lg-none">View All</button>
+
+    </section>
 
 
 
