--- a/index.html
+++ b/index.html
@@ -380,8 +380,107 @@
 
     </section>
 
+    <section class="mb-5 pb-5">
 
-
+        <!--large device  -->
+        <div class="container p-0 explore d-flex align-items-center d-none d-lg-flex">
+          <div class=" w-50">
+            <img class="img-fluid w-100" src="images/working.png" alt="">
+          </div>
+          <div class="w-50 px-5">
+            <h2 class="fw-bold fs-1 mb-3">Explore The elearning
+              Institute</h2>
+            <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour, or
+              randomised words which don't look even slightly believable. If you are going
+              to use a passage of Lorem Ipsum, you need to be sure.</p>
+            <p class="text-muted">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+              generators on the Internet tend to repeat predefined.</p>
+            <div class="d-flex justify-content-between mt-3">
+              <div class="me-2">
+                <h2 class="fw-bold fs-1 mb-0">3.2K+</h2>
+                <p class="fs-5 text-muted">Online Course</p>
+              </div>
+              <div class="mx-2 ">
+                <h2 class="fw-bold fs-1 mb-0">600+</h2>
+                <p class="fs-5 text-muted">Expert member</p>
+              </div>
+              <div class="mx-2">
+                <h2 class="fw-bold fs-1">1k+</h2>
+                <p class="fs-5 text-muted">Rating & Review </p>
+              </div>
+            </div>
+            <button class="mt-3 btn btn-primary fw-semibold fs-5  px-4 py-2">Get Started</button>
+          </div>
+        </div>
+  
+        <!-- midium devices  -->
+        <div class="container p-0 explore d-flex align-items-center d-none d-md-flex d-lg-none">
+          <div class=" w-50">
+            <img class="img-fluid w-100" src="images/working.png" alt="">
+          </div>
+          <div class="w-50 px-3">
+            <h2 class="fw-bold fs-2 mb-2">Explore The elearning
+              Institute</h2>
+            <div class=" ">
+            <p class="text-muted elli mb-0 ">There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour, or
+              randomised words which don't look even slightly believable. If you are going
+              to use a passage of Lorem Ipsum, you need to be sure.</p>
+              <a class="text-decoration-none" href="#">see more</a>
+            </div>
+            <div class="d-flex justify-content-between mt-3 flex-wrap">
+              <div class="">
+                <h2 class="fw-bold fs-2 mb-0">3.2K+</h2>
+                <p class="fs-5 text-muted">Online Course</p>
+              </div>
+              <div class=" ">
+                <h2 class="fw-bold fs-2 mb-0">600+</h2>
+                <p class="fs-5 text-muted">Expert member</p>
+              </div>
+              <div class="">
+                <h2 class="fw-bold fs-2">1k+</h2>
+                <p class="fs-5 text-muted">Rating & Review </p>
+              </div>
+            </div>
+            <button class="mt-3 btn btn-primary fw-semibold fs-5  px-4 py-2">Get Started</button>
+          </div>
+        </div>
+  
+        <!-- small devices  -->
+        <div class="container rounded explore d-flex flex-column  d-md-none ">
+          <div class="w-100 rounded pt-3">
+            <img class="img-fluid w-100  rounded" src="images/working.png" alt="">
+          </div>
+          <div class="w-100 p-3">
+            <h2 class="fw-bold fs-1 mb-2">Explore The elearning
+              Institute</h2>
+            <div class=" ">
+            <p class="text-muted elli mb-0 ">There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour, or
+              randomised words which don't look even slightly believable. If you are going
+              to use a passage of Lorem Ipsum, you need to be sure.</p>
+              <a class="text-decoration-none" href="#">see more</a>
+            </div>
+            <div class="d-flex justify-content-between mt-3 flex-wrap">
+              <div class="">
+                <h2 class="fw-bold fs-2 mb-0">3.2K+</h2>
+                <p class="fs-5 text-muted">Online Course</p>
+              </div>
+              <div class=" ">
+                <h2 class="fw-bold fs-2 mb-0">600+</h2>
+                <p class="fs-5 text-muted">Expert member</p>
+              </div>
+              <div class="">
+                <h2 class="fw-bold fs-1">1k+</h2>
+                <p class="fs-5 text-muted">Rating & Review </p>
+              </div>
+            </div>
+            <button class="mt-3 btn btn-primary fw-semibold fs-5  px-4 py-2">Get Started</button>
+          </div>
+        </div>
+      </section>
+  
 
 
 
